--- a/DAC-001_Intro_To_Python/DAC_001_Intro_to_Python_Blank_Session_1.ipynb
+++ b/DAC-001_Intro_To_Python/DAC_001_Intro_to_Python_Blank_Session_1.ipynb
@@ -388,23 +388,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 24,
       "metadata": {
         "id": "g8SngCyXoqGt"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[]\n",
+            "['S', 'L', 'A', 'Y']\n",
+            "[True, 'Slay', 173, 3.14]\n"
+          ]
+        }
+      ],
       "source": [
-        " # Empty list\n",
+        "list1 = [] # Empty list\n",
+        "print(list1)\n",
         "\n",
+        "list2 = [\"S\", \"L\", \"A\", \"Y\"]\n",
+        "print(list2)\n",
         "\n",
-        "\n",
-        "\n",
-        " # List with different data types\n"
+        "mixedlist = [True, \"Slay\", 173, 3.14] # List with different data types\n",
+        "print(mixedlist)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -415,28 +427,36 @@
       },
       "outputs": [
         {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 'yayy']\n",
+            "[True, 'Slay', 173, 3.14, 'yay']\n"
+          ]
+        },
+        {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'\\nNote on the append() method:\\n\\nThe append() method adds the element to the end of the list each time it is executed.\\nCalling append() multiple times (i.e., running this code again) will continue to add the elements to the existing list, rather than starting over.\\n(So, the same element will be added twice if you run the code twice, three times if you run it three times, and so on.)\\nTo reset the list, you can reinitialize it (rerun the code from the beginning).\\n'"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 25,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# Adding elements to a list using the above variables\n",
+        "list1.append(1)\n",
+        "list1.append(\"yayy\")\n",
+        "print(list1)\n",
         "\n",
         "  # Adding an integer to the list\n",
         "  # Adding a string to the list\n",
         "  # Output: [1, \"AHH\"]\n",
         "\n",
-        "  # Adding a string to the mixed list\n",
-        "  # Output: [True, 'Slay', 173, 3.14, 'AHH']\n",
+        "mixedlist.append(\"yay\")  # Adding a string to the mixed list\n",
+        "print(mixedlist)  # Output: [True, 'Slay', 173, 3.14, 'AHH']\n",
         "\n",
         "\"\"\"\n",
         "Note on the append() method:\n",
@@ -450,14 +470,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 26,
       "metadata": {
         "id": "EhMqwM-w0YPy"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[50, 1, 'yayy']\n"
+          ]
+        }
+      ],
       "source": [
         "# Inserting elements into a list at a specific position\n",
         "# Syntax: list_.insert(position, item)\n",
+        "list1.insert(0,50)\n",
+        "print(list1)\n",
         "\n",
         "  # Insert the number 50 at the 0th index (1st number is the position, 2nd is the element to add)\n",
         "  # Output will show 50 at the start of the list"
@@ -465,116 +495,192 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 27,
       "metadata": {
         "id": "NYr5u52Rwy6h"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 'yayy']\n"
+          ]
+        }
+      ],
       "source": [
         "# Deleting elements from a list\n",
         "\n",
         "# Using `del` to delete by index\n",
-        "  # Deletes the element at index 0 (1st element in the list)\n",
-        "  # Output: List with the 1st element removed"
+        "del list1[0] # Deletes the element at index 0 (1st element in the list)\n",
+        "print(list1) # Output: List with the 1st element removed"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 28,
       "metadata": {
         "id": "Q05F_xXdFdpx"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1]\n"
+          ]
+        }
+      ],
       "source": [
         "# Alternative Method for Deleting elements from a list\n",
         "\n",
         "# Using `remove()` to delete by value\n",
-        "  # Removes the first occurrence of the value 50 from the list\n",
-        "  # Output: List without the first 50"
+        "list1.remove(\"yayy\") # Removes the first occurrence of the value 50 from the list\n",
+        "print(list1) # Output: List without the first 50"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {
         "id": "Qxd8-H6oG0a0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
       "source": [
         "# List Indexing\n",
-        "\n",
-        "  # Finds the index position of the element '3' in the list\n",
-        "  # Output: 0 (since '3' is at the 0th index)"
+        "list4=[3,1,4,1,5]\n",
+        "index_list4=list4.index(3) # Finds the index position of the element '3' in the list\n",
+        "print(index_list4) # Output: 0 (since '3' is at the 0th index)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 5,
       "metadata": {
         "id": "JTsF0nfmSINs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "5\n",
+            "minimum value  1\n",
+            "maximum value: 5\n"
+          ]
+        }
+      ],
       "source": [
         "# Finding minimum and maximum values in a list\n",
-        "  # Use the min() function to find the smallest element in list4\n",
-        "  # Use the max() function to find the largest element in list4\n",
+        "min_list4 = min(list4) # Use the min() function to find the smallest element in list4\n",
+        "max_list4 = max(list4) # Use the max() function to find the largest element in list4\n",
+        "print(min_list4)\n",
+        "print(max_list4)\n",
         "\n",
         "\n",
         "\n",
         "# With labels\n",
-        "  # Output the minimum value\n",
-        "  # Output the maximum value"
+        "print(\"minimum value \", min_list4 ) # Output the minimum value\n",
+        "print(\"maximum value:\", max_list4)  # Output the maximum value"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 6,
       "metadata": {
         "id": "vc5SVEzvBK33"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 4, 5, 6, 9]\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
-        "\n",
+        "listNum = [4,2,1,3,4,6,5,9]\n",
+        "sorted_list_numlist =sorted(listNum)\n",
+        "print(sorted_list_numlist)\n",
         " # Use the sorted() function to sort the list\n",
         " # Output the sorted list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "metadata": {
         "id": "dI6AzeKIBrvB"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[9, 7, 6, 1, 2, 3, 8, 7, 5]\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
-        " # Reverse listNum2\n",
-        " # Otput the reversed list"
+        "listnum2 = [5,7,8,3,2,1,6,7,9]\n",
+        "listnum2.reverse() # Reverse listNum2\n",
+        "print(listnum2)# Otput the reversed list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 9,
       "metadata": {
         "id": "zlonSikNCFQj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[]\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
+        "listnum2 = [5,7,8,3,2,1,6,7,9]\n",
+        "listnum2.clear() \n",
+        "print(listnum2)\n",
         " # Clear all elements from the list\n",
         " # Print the cleared list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 10,
       "metadata": {
         "id": "ZLm22sE7CJ_t"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['m', 'a', 'y', 'a', 6]\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
+        "list5 = [\"m\",\"a\",\"y\"]\n",
+        "list6 = [\"a\",6]\n",
+        "listAdded = list5 + list6 \n",
+        "print(listAdded)\n",
         "\n",
         " # Add the two lists together\n",
         " # Output the added list"
@@ -582,13 +688,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 11,
       "metadata": {
         "id": "u3FYS3JZCgkc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['inbha', 'h', 'inbha', 'h']\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
+        "listnames = [\"inbha\",\"h\"]\n",
+        "listmultiplied = listnames *2 \n",
+        "print(listmultiplied)\n",
         " # Multiply the list by 2\n",
         " # Output the multiplied list"
       ]
@@ -606,62 +722,127 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 12,
       "metadata": {
         "id": "kwrmo-XJ0YPy"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "\n",
-        " # Check the type of the 'parents' variable"
+        " # Check the type of the 'parents' variable\n",
+        "dance =(\"jazz\",'tap')\n",
+        "type(dance)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 13,
       "metadata": {
         "id": "K_PTgd_aEKEI"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['jazz', 'tap']\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "\n",
+        "tuplelist = list(dance)\n",
+        "print(tuplelist)\n",
+        "type(tuplelist)\n",
         " # Output the list\n",
         " # Check the type of 'tuplelist'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 23,
       "metadata": {
         "id": "MLliO46RElXM"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['jazz', 'tap', 'ballet', 'ballet,Hip Hope, Salsa']\n"
+          ]
+        }
+      ],
       "source": [
+        "tuplelist.append(\"ballet,Hip Hope, Salsa\")\n",
+        "print(tuplelist)\n",
         " # Add new line to the list 'tuplelist'\n",
         " # Output the updated list"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 21,
       "metadata": {
         "id": "32Wg2x89GuXA"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "('jazz', 'tap', 'ballet')\n"
+          ]
+        }
+      ],
       "source": [
         " # Convert the list 'tuplelist' back to a tuple\n",
-        " # Check the value of the new tuple"
+        "tuplelist.append(\"ballet\")\n",
+        "\n",
+        " # Check the value of the new tuple\n",
+        "new_tuple = tuple(tuplelist)\n",
+        "print(new_tuple)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 22,
       "metadata": {
         "id": "SS3bxGkbG-vl"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ]
+        }
+      ],
       "source": [
         " # Get the length of the list 'tuplelist'\n",
+        "length_of_tuplelist = len(tuplelist)\n",
+        "print(length_of_tuplelist)\n",
         " # Output of the length"
       ]
     },
@@ -681,37 +862,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 29,
       "metadata": {
         "id": "B5vdCq3P0YPy"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'dog', 'cat', 'wolf'}\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
-        " # Output of the set"
+        " # Output of the set\n",
+        "x={\"dog\",\"cat\",\"wolf\"}\n",
+        "print(x)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {
+        "id": "VgrBbY_1HrNx"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'dog', 'cat', 'wolf', 'fish'}\n"
+          ]
+        }
+      ],
+      "source": [
+        " # Add an element to the set\n",
+        " # Output of the updated set\n",
+        "\n",
+        "x.add(\"fish\")\n",
+        "print(x)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 31,
       "metadata": {
-        "id": "VgrBbY_1HrNx"
-      },
-      "outputs": [],
-      "source": [
-        " # Add an element to the set\n",
-        " # Output of the updated set"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 32,
-      "metadata": {
         "id": "MbMyt-oQH80_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'dog', 'wolf', 'fish'}\n"
+          ]
+        }
+      ],
       "source": [
         " # Remove an element from the set\n",
+        "x.remove('cat')\n",
+        "print(x)\n",
         " # Output of the updated set"
       ]
     },
@@ -721,61 +933,55 @@
       "metadata": {
         "id": "Z6V43JC2IaLt"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{2, (1, 2, 3), 4.3, 'Hello'}\n"
+          ]
+        }
+      ],
       "source": [
+        "z = {(1,2,3),\"Hello\",2,4.3}\n",
         "\n",
-        " # Output of the set"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 34,
-      "metadata": {
-        "id": "sdYsD2okI5cZ"
-      },
-      "outputs": [],
-      "source": [
-        "\n",
-        " # Output of the original list\n",
-        "\n",
-        " # Convert the list to a set (to remove duplicates)\n",
-        " # Output of the converted set\n",
-        "\n",
-        " # Check the data type of r_set\n",
-        " # Output of the converted set"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "fEkjRhbC0YPy"
-      },
-      "source": [
-        "## Working with Dictionaries"
+        "print(z) # Output of the set"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 35,
       "metadata": {
-        "id": "YJCVMWae0YPy"
+        "id": "sdYsD2okI5cZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 7, 4]\n",
+            "{1, 2, 3, 4, 5, 7}\n",
+            "<class 'set'>\n"
+          ]
+        }
+      ],
       "source": [
-        "# Creating a dictionary to store information about a person\n",
+        "\n",
+        " # Output of the original list\n",
+        "r = [1,2,3,4,5,7,4]\n",
+        "print(r)\n",
         "\n",
         "\n",
+        " # Convert the list to a set (to remove duplicates)\n",
+        " # Output of the converted set\n",
+        "r_set = set(r)\n",
+        "print(r_set)\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "  # Outputs the entire dictionary\n",
-        "\n",
-        "# Accessing a specific value using the key\n",
-        "\n",
-        "\n",
-        "# Using the get() method to retrieve a value safely\n",
-        "\n"
+        " # Check the data type of r_set\n",
+        " # Output of the converted set\n",
+        "type_of_r_set = type(r_set)\n",
+        "print(type_of_r_set)\n"
       ]
     }
   ],
