--- a/DAC-007_Web_Scraping/DAC-007_Web_Scraping_Student.ipynb
+++ b/DAC-007_Web_Scraping/DAC-007_Web_Scraping_Student.ipynb
@@ -5337,7 +5337,7 @@
     "\n",
     "# We need put the . for class and id, because they are CSS selectors\n",
     "\n",
-    "# Do not have to put the dots there because img is not under the division of the tombstone-container\n",
+    "# Do not have to put the dots there because img s not under the division of the tombstone-container\n",
     "\n"
    ]
   },
